<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2_training</name>
  <version>0.0.0</version>
  <description>The turtlebot2_training package</description>
  <maintainer email="jerome@todo.todo">jerome</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
